--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,75 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==4.2.2
-async-timeout==4.0.2
-attrs==22.2.0
-beautifulsoup4==4.12.2
-blinker==1.6
-cachetools==5.3.0
-certifi==2022.12.7
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
-contourpy==1.0.7
-cycler==0.11.0
-decorator==5.1.1
-entrypoints==0.4
-Faker==18.4.0
-favicon==0.7.0
-fonttools==4.39.3
-frozendict==2.3.7
-frozenlist==1.3.3
-gitdb==4.0.10
-GitPython==3.1.31
-htbuilder==0.6.1
-idna==3.4
-importlib-metadata==6.2.0
-Jinja2==3.1.2
-jsonschema==4.17.3
-kiwisolver==1.4.4
-lxml==4.9.2
-Markdown==3.4.3
-markdown-it-py==2.2.0
-markdownlit==0.0.6
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-mdurl==0.1.2
-more-itertools==9.1.0
-multidict==6.0.4
-numpy==1.24.2
-openai==0.27.4
-packaging==23.0
-pandas==1.5.3
-Pillow==9.5.0
-plotly==5.14.1
-protobuf==3.20.3
-pyarrow==11.0.0
-pydeck==0.8.0
-Pygments==2.14.0
-pymdown-extensions==9.11
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-requests==2.28.2
-rich==13.3.3
-six==1.16.0
-smmap==5.0.0
-soupsieve==2.4
-st-annotated-text==4.0.0
-streamlit==1.21.0
-streamlit-camera-input-live==0.2.0
-streamlit-card==0.0.4
-streamlit-embedcode==0.1.2
-streamlit-extras==0.2.7
-streamlit-faker==0.0.2
-streamlit-image-coordinates==0.1.3
-streamlit-keyup==0.2.0
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==1.0.2
-tenacity==8.2.2
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-tqdm==4.65.0
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==4.3
-urllib3==1.26.15
-validators==0.20.0
-yarl==1.8.2
-zipp==3.15.0
+aiohttp
+aiosignal
+altair
+async-timeout
+attrs
+beautifulsoup4
+blinker
+cachetools
+certifi
+chardet
+charset-normalizer
+click
+contourpy
+cycler
+decorator
+entrypoints
+Faker
+favicon
+fonttools
+frozendict
+frozenlist
+gitdb
+GitPython
+htbuilder
+idna
+importlib-metadata
+Jinja2
+jsonschema
+kiwisolver
+lxml
+Markdown
+markdown-it-py
+markdownlit
+MarkupSafe
+matplotlib
+mdurl
+more-itertools
+multidict
+numpy
+openai
+packaging
+pandas
+Pillow
+plotly
+protobuf
+pyarrow
+pydeck
+Pygments
+pymdown-extensions
+Pympler
+pyparsing
+pyrsistent
+python-dateutil
+pytz
+pytz-deprecation-shim
+PyYAML
+requests
+rich
+six
+smmap
+soupsieve
+st-annotated-text
+streamlit
+tenacity
+toml
+toolz
+tornado
+tqdm
+typing_extensions
+tzdata
+tzlocal
+urllib3
+validators
+yarl
+zipp
